# kite-stock-analysis

./: .env.example  .gitignore  CLAUDE.md  LICENSE  pyproject.toml
.github/workflows/: ci.yml
stocks_analysis/: __main__.py  analysis.py  kite.py  main.py  market_data.py  models.py  sheets.py
tasks/: 01-fetch-kite-holdings.md  02-google-sheets-integration.md  README.md
tests/: conftest.py  test_analysis.py  test_kite.py  test_main.py  test_market_data.py  test_metrics.py  test_models.py  test_sheets.py  test_smoke.py
